--- a/index.html
+++ b/index.html
@@ -31,22 +31,25 @@
     </header>
 
     <main class="contGaleria">
-        <section >
+        <section>
             <div class="galeria">
-            <a href="Galeria.html"><img src="Imagenes/1.jpg"></a>
-            <a href="Galeria.html"><img src="Imagenes/2.jpg"></a>
-            <a href="Galeria.html"><img src="Imagenes/3.jpg"></a>
-            <a href="Galeria.html"><img src="Imagenes/4.jpg"></a>
+                <a href="Galeria.html"><img src="Imagenes/1.jpg"></a>
+                <a href="Galeria.html"><img src="Imagenes/2.jpg"></a>
+                <a href="Galeria.html"><img src="Imagenes/3.jpg"></a>
+                <a href="Galeria.html"><img src="Imagenes/4.jpg"></a>
+            </div>
         </section>
     </main>
 
     <h2>mis especialidades</h2>
     <section class="info">
         <article class="institucional">
-        <h3>institucional</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas a obcaecati, alias accusantium accusamus
-            nobis fugiat sunt vel itaque, porro tempore id incidunt. Veniam fugiat quod corrupti deserunt sunt error.
-        </p>
+            <h3>institucional</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas a obcaecati, alias accusantium
+                accusamus
+                nobis fugiat sunt vel itaque, porro tempore id incidunt. Veniam fugiat quod corrupti deserunt sunt
+                error.
+            </p>
         </article>
         <article class="recienNacido">
             <h3>recién nacido </h3>
@@ -82,9 +85,11 @@
 
     <!--Parte 4-->
     <section class="imagFondo">
-        <img src="imagenes/mellis.jpg">
-        <img src="imagenes/panza.jpg">
-        <img src="imagenes/hijanoe.jpg">
+        <div class="fotoFondo">
+            <img src="imagenes/mellis.jpg">
+            <img src="imagenes/panza.jpg">
+            <img src="imagenes/hijanoe.jpg">
+        </div>
     </section>
 
 
