--- a/Galeria.html
+++ b/Galeria.html
@@ -14,14 +14,13 @@
 </head>
 
 <body>
-  
+
   <nav class="navbar navbar-expand-lg navbar-light bg-transparen">
     <div class="container-fluid fluid1">
       <a href="index.html" class="navbar-brand"><img src="imagenes/LOGOCALMA.jpg" alt="Logo" class="imgLogo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class=><img src="imagenes/mhambu.png" alt="Logo"  class="menuham"></span>
-      
+        <div><img src="imagenes/mhambu.png" alt="Logo" class="menuham"></div>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
@@ -47,78 +46,78 @@
   <div class="container-fluid">
     <h2>Galeria de imagenes</h2>
     <h3>Berna con su osito</h3>
-  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="Imagenes/berna3.jpg" class="d-block w-75" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="Imagenes/berna4.jpg" class="d-block w-75" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="Imagenes/berna2.jpg" class="d-block w-75" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="Imagenes/4.jpg" class=" d-block w-75" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="Imagenes/berna1.jpg" class="d-block w-75" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-<h3>Alemendra 14 dias</h3>
-  <div id="carouselExampleFade2" class="carousel slide carousel-fade" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="Imagenes/almen3.jpg" class="d-block w-75" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="Imagenes/alemn2.jpg" class="d-block w-75" alt="...">
-      </div>
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="Imagenes/berna3.jpg" class="d-block w-75" alt="...">
+        </div>
         <div class="carousel-item">
-        <img src="Imagenes/almen1.jpg" class="d-block w-75" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade2" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade2" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-  <h3>Pepa y sus dos soles</h3>
-  <div id="carouselExampleFade3" class="carousel slide carousel-fade" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="Imagenes/pepa3.jpg" class="d-block w-75" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="Imagenes/pepa2.jpg" class="d-block w-75" alt="...">
-      </div>
+          <img src="Imagenes/berna4.jpg" class="d-block w-75" alt="...">
+        </div>
         <div class="carousel-item">
-        <img src="Imagenes/pepa1.jpg" class="d-block w-75" alt="...">
+          <img src="Imagenes/berna2.jpg" class="d-block w-75" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="Imagenes/4.jpg" class=" d-block w-75" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="Imagenes/berna1.jpg" class="d-block w-75" alt="...">
+        </div>
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade3" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade3" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+    <h3>Alemendra 14 dias</h3>
+    <div id="carouselExampleFade2" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="Imagenes/almen3.jpg" class="d-block w-75" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="Imagenes/alemn2.jpg" class="d-block w-75" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="Imagenes/almen1.jpg" class="d-block w-75" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade2" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade2" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <h3>Pepa y sus dos soles</h3>
+    <div id="carouselExampleFade3" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="Imagenes/pepa3.jpg" class="d-block w-75" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="Imagenes/pepa2.jpg" class="d-block w-75" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="Imagenes/pepa1.jpg" class="d-block w-75" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade3" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade3" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
   </div>
-</div>
   <footer class="footer">
     <!--Parte 5-->
     <div class="redes">
@@ -127,7 +126,7 @@
       <a href="https://www.facebook.com/calmanewborn" target="_blank"><i class="fab fa-facebook-f"></i></a>
       <i class="fas fa-envelope"></i>
     </div>
-  </div>
+    </div>
 
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
