--- a/Precio.html
+++ b/Precio.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Precio</title>
     <!--fond Awesome-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="Css/estilo.css">
 </head>
@@ -15,75 +16,76 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparen">
         <div class="container-fluid fluid1">
-          <a href="index.html" class="navbar-brand"><img src="imagenes/LOGOCALMA.jpg" alt="Logo" class="imgLogo"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class=><img src="imagenes/mhambu.png" alt="Logo"  class="menuham"></span>
-          
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Galeria.html">Galeria</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Conocenos.html">Conocenos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Contacto.html">Contacto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Precio.html">Precio</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    <div class="container-fluid">
-        <h2> Precio por nuestro servicio</h2>
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Tipo de Trabajo</th>
-            <th scope="col">Descripcion</th>
-            <th scope="col">Cantidad de fotos</th>
-            <th scope="col">Precio</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">Hoteles</th>
-            <td>
-                <ul>
-                    <li>Desayuno</li>
-                    <li>Salon<li>
-                    <li>Habitaciones</li>
+            <a href="index.html" class="navbar-brand"><img src="imagenes/LOGOCALMA.jpg" alt="Logo" class="imgLogo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <div><img src="imagenes/mhambu.png" alt="Logo" class="menuham"></div>
+
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Galeria.html">Galeria</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Conocenos.html">Conocenos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Contacto.html">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Precio.html">Precio</a>
+                    </li>
                 </ul>
-            </td>
-            <td>70</td>
-            <td>$15000</td>
-          <tr>
-            <th scope="row">Embarazada</th>
-            <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, praesentium.</td>
-            <td>70</td>
-            <td>$15000</td>
-          </tr>
-          <tr>
-            <th scope="row">Cumpleaños</th>
-            <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, praesentium.</td>
-            <td>75</td>
-            <td>$15500</td>
-            <tr>
-                <td scope="row"> Casamientos</td>
-                <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, praesentium.</td>
-                <td>100</td>
-                <td>$20000</td>
-            </tr>
-        </tbody>
-      </table>
+            </div>
+        </div>
+    </nav>
+    <div class="container-fluid">
+        <h2> Precios por nuestros servicios</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Tipo de Trabajo</th>
+                    <th scope="col">Descripcion</th>
+                    <th scope="col">Cantidad de fotos</th>
+                    <th scope="col">Precio</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">Hoteles</th>
+                    <td>
+                        <ul>
+                            <li>Desayuno</li>
+                            <li>Salon
+                            <li>
+                            <li>Habitaciones</li>
+                        </ul>
+                    </td>
+                    <td>70</td>
+                    <td>$15000</td>
+                <tr>
+                    <th scope="row">Embarazada</th>
+                    <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, praesentium.</td>
+                    <td>70</td>
+                    <td>$15000</td>
+                </tr>
+                <tr>
+                    <th scope="row">Cumpleaños</th>
+                    <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, praesentium.</td>
+                    <td>75</td>
+                    <td>$15500</td>
+                <tr>
+                    <td scope="row"> Casamientos</td>
+                    <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, praesentium.</td>
+                    <td>100</td>
+                    <td>$20000</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
     <footer class="footer">
         <!--Parte 5-->
@@ -95,9 +97,11 @@
         </div>
 
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 
 </body>
 
-</html>f
+</html>
