--- a/Contacto.html
+++ b/Contacto.html
@@ -20,7 +20,7 @@
       <a href="index.html" class="navbar-brand"><img src="imagenes/LOGOCALMA.jpg" alt="Logo" class="imgLogo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <div><img src="imagenes/mhambu.png" alt="Logo" class="menuham"></div>
+        <div class="menuham-container"><img src="imagenes/mhambu.png" alt="Logo" class="menuham"></div>
 
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -45,7 +45,7 @@
     </div>
   </nav>
 
-  <form>
+  <form class="form-container">
 
     <div class="form-group">
       <label for="full_name_id" class="control-label">Nombre</label>
@@ -80,7 +80,7 @@
     <div class="form-group">
       <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon"></i></span>
       <div class="col-md-8">
-        <textarea class="form-control" id="message" name="message" placeholder="Enter su mensaje" rows="7"></textarea>
+        <textarea class="form-control" id="message" name="message" placeholder="Escriba su mensaje" rows="7"></textarea>
       </div>
     </div>
 
@@ -88,7 +88,7 @@
       <div class="checkbox">
         <label><input type="checkbox"> Suscribirse</label>
       </div>
-      <button type="submit" class="btn btn-dark">Subir</button>
+      <button type="submit" class="btn btn-dark">Guardar</button>
       <button type="clean" class="btn btn-dark">Limpiar</button>
     </div>
 
