--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +23,7 @@
             <a href="index.html" class="navbar-brand"><img src="imagenes/LOGOCALMA.jpg" alt="Logo" class="imgLogo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <div><img src="imagenes/mhambu.png" alt="Logo"  class="menuham"></div>
+                <div class="menuham-container"><img src="imagenes/mhambu.png" alt="Logo" class="menuham"></div>
 
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -58,7 +57,6 @@
             </div>
         </section>
     </main>
-
     <h2>mis especialidades</h2>
     <section class="info">
         <article class="institucional">
@@ -111,9 +109,9 @@
     </section>
 
 
+ <!--Parte 5-->
     <footer class="footer">
-        <!--Parte 5-->
-        <div class="redes">
+            <div class="redes">
             <span> Copyright © </span>
             <a href="https://www.instagram.com/calma.fotografia/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.facebook.com/calmanewborn" target="_blank"><i class="fab fa-facebook-f"></i></a>
