--- a/Conocenos.html
+++ b/Conocenos.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conocenos</title>
-    <!--fond Awesome-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -20,7 +19,7 @@
             <a href="index.html" class="navbar-brand"><img src="imagenes/LOGOCALMA.jpg" alt="Logo" class="imgLogo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <div><img src="imagenes/mhambu.png" alt="Logo" class="menuham"></div>
+                <div class="menuham-container"><img src="imagenes/mhambu.png" alt="Logo" class="menuham"></div>
 
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -46,8 +45,8 @@
     </nav>
 
     <h2>Nosotros</h2>
-    <div class="container-fluid">
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam est labore ratione laborum cumque
+    <div class="fluid2">
+        <p > Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam est labore ratione laborum cumque
             praesentium ducimus, minus nostrum veniam! Aspernatur non ratione dolore id eligendi autem, ea
             laboriosam minima. Earum error tempore nihil incidunt sunt dolor esse? Quibusdam ipsa alias molestiae
             laborum nobis quaerat cumque reiciendis iusto provident voluptates tempora nihil, accusantium quia fugit
