--- a/Galeria.html
+++ b/Galeria.html
@@ -20,7 +20,7 @@
       <a href="index.html" class="navbar-brand"><img src="imagenes/LOGOCALMA.jpg" alt="Logo" class="imgLogo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <div><img src="imagenes/mhambu.png" alt="Logo" class="menuham"></div>
+        <div class="menuham-container"><img src="imagenes/mhambu.png" alt="Logo" class="menuham"></div>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
