--- a/Paginas/Galeria.html
+++ b/Paginas/Galeria.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Galeria</title>
+  <meta name="description" content="Fotograia New Born Tandil. Fotografia Tandil. Fotografo Tanidil. Fotograia New Born Tandil galeria de fotos">
+  <title>Calma fotografia Galeria</title>
   <!--fond Awesome-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -15,35 +16,35 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+  <nav class="navbar navbar-expand-sm navbar-light">
     <div class="container-fluid">
-        <a href="index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <div class="menuham-container"><img src="../Imagenes/mhambu.png" alt="Logo" class="menuham"></div>
+      <a href="../index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="menuham-container"><img src="../Imagenes/mhambu.png" alt="Logo" class="menuham"></div>
 
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./Galeria.html">Galeria</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./Conocenos.html">Conocenos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./Contacto.html">Contacto</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./Precio.html">Precio</a>
-                </li>
-            </ul>
-        </div>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Galeria.html">Galeria</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Conocenos.html">Conocenos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Precio.html">Precio</a>
+          </li>
+        </ul>
+      </div>
     </div>
-</nav>
+  </nav>
   <div class="container-fluid">
     <h2>Galeria de imagenes</h2>
     <h3>Berna con su osito</h3>
