--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fotograia New Born Tandil. Fotografia Tandil. Fotografo Tanidl">
     <!--fond Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <!--Css-->
@@ -18,9 +20,10 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparen">
+    <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container-fluid">
-            <a href="index.html" class="navbar-brand"><img src="./Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
+            <a href="index.html" class="navbar-brand"><img src="./Imagenes/LOGOCALMA.png" alt="Logo"
+                    class="imgLogo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="menuham-container"><img src="./Imagenes/mhambu.png" alt="Logo" class="menuham"></div>
@@ -109,13 +112,13 @@
     </section>
 
 
- <!--Parte 5-->
+    <!--Parte 5-->
     <footer class="footer">
-            <div class="redes">
+        <div class="redes">
             <span> Copyright © </span>
             <a href="https://www.instagram.com/calma.fotografia/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.facebook.com/calmanewborn" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <i class="fas fa-envelope"></i>
+            <a href="https://www-" target="_blank"></a><i class="fas fa-envelope"></i>
         </div>
 
     </footer>
