--- a/Paginas/Conocenos.html
+++ b/Paginas/Conocenos.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conocenos</title>
+    <meta name="description" content="Fotograia New Born Tandil. Fotografia Tandil. Fotografo Tanidl">
+    <title>Calma fotografia Conocenos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -14,9 +15,10 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+    <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container-fluid fluid">
-            <a href="index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
+            <a href="../index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo"
+                    class="imgLogo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="menuham-container"><img src="../Imagenes/mhambu.png" alt="Logo" class="menuham"></div>
@@ -46,7 +48,7 @@
 
     <h2>Nosotros</h2>
     <div class="conteNosotros">
-        <p > Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam est labore ratione laborum cumque
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam est labore ratione laborum cumque
             praesentium ducimus, minus nostrum veniam! Aspernatur non ratione dolore id eligendi autem, ea
             laboriosam minima. Earum error tempore nihil incidunt sunt dolor esse? Quibusdam ipsa alias molestiae
             laborum nobis quaerat cumque reiciendis iusto provident voluptates tempora nihil, accusantium quia fugit
