--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container-fluid">
-            <a href="index.html" class="navbar-brand"><img src="Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
+            <a href="./index.html" class="navbar-brand"><img src="./Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <div class="menuham-container"><img src="Imagenes/mhambu.png" alt="Logo" class="menuham"></div>
+                <div class="menuham-container"><img src="./Imagenes/mhambu.png" alt="Logo" class="menuham"></div>
 
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -37,16 +37,16 @@
                         <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./otra/Galeria.html">Galeria</a>
+                        <a class="nav-link" href="./pages/Galeria.html">Galeria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./otra/Conocenos.html">Conocenos</a>
+                        <a class="nav-link" href="./pages/Conocenos.html">Conocenos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./otra/Contacto.html">Contacto</a>
+                        <a class="nav-link" href="./pages/Contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./otra/Precio.html">Precio</a>
+                        <a class="nav-link" href="./pages/Precio.html">Precio</a>
                     </li>
                 </ul>
             </div>
@@ -56,10 +56,10 @@
     <main class="contGaleria">
         <section>
             <div class="galeria">
-                <a href="Galeria.html"><img src="Imagenes/1.png"></a>
-                <a href="Galeria.html"><img src="Imagenes/2.png"></a>
-                <a href="Galeria.html"><img src="Imagenes/3.png"></a>
-                <a href="Galeria.html"><img src="Imagenes/4.png"></a>
+                <a href="./otra/Galeria.html"><img src="./Imagenes/1.png"></a>
+                <a href="./otra/Galeria.html"><img src="./Imagenes/2.png"></a>
+                <a href="./otra/Galeria.html"><img src="./Imagenes/3.png"></a>
+                <a href="./otra/Galeria.html"><img src="./Imagenes/4.png"></a>
             </div>
         </section>
     </main>
@@ -108,9 +108,9 @@
     <!--Parte 4-->
     <section class="imagFondo">
         <div class="fotoFondo">
-            <img src="Imagenes/mellis.png">
-            <img src="Imagenes/panza.png">
-            <img src="Imagenes/hijanoe.png">
+            <img src="./Imagenes/mellis.png">
+            <img src="./Imagenes/panza.png">
+            <img src="./Imagenes/hijanoe.png">
         </div>
     </section>
 
