--- a/pages/Conocenos.html
+++ b/pages/Conocenos.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container-fluid">
-            <a href="index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
+            <a href="../index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="menuham-container"><img src="../Imagenes/mhambu.png" alt="Logo" class="menuham"></div>
@@ -66,22 +66,8 @@
             reprehenderit soluta enim autem eaque, quia quibusdam provident ratione veritatis. Doloremque nostrum
             sequi officia aperiam!
         </p>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro deleniti placeat excepturi ex ut
-            distinctio dolore, cumque quidem doloremque? Eveniet eum qui cumque commodi quo quasi ipsum sed, quia
-            magni ea nostrum pariatur modi ut suscipit, sit, sapiente inventore laborum cupiditate unde voluptatum?
-            Eum aspernatur facere id exercitationem. Voluptates enim facere provident! Soluta, inventore possimus
-            veritatis nisi ratione cum ullam dicta eos maiores illum doloremque omnis porro nemo nihil nulla quidem
-            recusandae animi nostrum deleniti rerum quibusdam excepturi dolorem iusto?
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut rerum deserunt ratione voluptate impedit
-            eveniet consectetur, tempora, deleniti dignissimos consequatur inventore dolor adipisci alias commodi
-            porro eligendi cumque veritatis molestiae tempore aspernatur delectus. Quia et tempora nulla inventore
-            quos, pariatur dignissimos quis animi fugit temporibus, eum distinctio aliquid dolorum vel ab. Iusto
-            voluptate saepe molestiae ad reiciendis itaque minima eos quisquam odit voluptatibus quas dolore
-            reprehenderit soluta enim autem eaque, quia quibusdam provident ratione veritatis. Doloremque nostrum
-            sequi officia aperiam!
+      
+   
     </div>
 
     </div>
