--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -18,7 +18,7 @@
 
   <nav class="navbar navbar-expand-sm navbar-light ">
     <div class="container-fluid fluid1">
-      <a href="index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
+      <a href="../index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <div class="menuham-container"><img src="../Imagenes/mhambu.png" alt="Logo" class="menuham"></div>
@@ -49,29 +49,29 @@
   <form class="form-container">
 
     <div class="form-group">
-      <label for="full_name_id" class="control-label">Nombre</label>
+      <label for="full_name_id" class="control-label"></label>
       <input type="text" class="form-control" id="full_name_id" name="full_name" placeholder="Nombre">
     </div>
 
     <div class="form-group">
-      <label for="street1_id" class="control-label">E-mail</label>
+      <label for="street1_id" class="control-label"></label>
       <input type="text" class="form-control" id="street1_id" name="street1" placeholder="E-mail">
     </div>
 
     <div class="form-group">
-      <label for="city_id" class="control-label">Ciudad</label>
-      <input type="text" class="form-control" id="city_id" name="city" placeholder="Tandil">
+      <label for="city_id" class="control-label"></label>
+      <input type="text" class="form-control" id="city_id" name="city" placeholder="Ciudad">
     </div>
 
     <div class="form-group">
-      <label for="street2_id" class="control-label">Direccion</label>
+      <label for="street2_id" class="control-label"></label>
       <input type="text" class="form-control" id="street2_id" name="street2" placeholder="Direccion">
     </div>
 
     <div class="form-group">
-      <label for="state_id" class="control-label">Donde nos Conociste</label>
-      <select class="form-control" id="state_id">
-        <option class="opciones" value="otro"></option>
+      <label for="state_id" class="control-label"></label>
+      <select  class="form-control" >
+        <option class="opciones" hidden selected>Donde nos Conociste?</option>
         <option class="opciones" value="Fb">Facebook</option>
         <option class="opciones" value="Inst">Instagram</option>
         <option class="opciones" value="otro">Otro</option>
@@ -80,7 +80,7 @@
 
     <div class="form-group">
       <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon"></i></span>
-      <div class="col-md-8">
+      <div class="col-md-12">
         <textarea class="form-control" id="message" name="message" placeholder="Escriba su mensaje" rows="7"></textarea>
       </div>
     </div>
