--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Galeria de fotos Calma new born Tandil">
-  <title>Galeria</title>
+  <title>Calma Fotografia Galeria</title>
   <!--fond Awesome-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -18,7 +18,7 @@
 
   <nav class="navbar navbar-expand-sm navbar-light ">
     <div class="container-fluid">
-      <a href="index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
+      <a href="../index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <div class="menuham-container"><img src="../Imagenes/mhambu.png" alt="Logo" class="menuham"></div>
@@ -26,7 +26,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
+                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./Galeria.html">Galeria</a>
