--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
     <main class="contGaleria">
         <section>
             <div class="galeria">
-                <a href="./otra/Galeria.html"><img src="./Imagenes/1.png"></a>
-                <a href="./otra/Galeria.html"><img src="./Imagenes/2.png"></a>
-                <a href="./otra/Galeria.html"><img src="./Imagenes/3.png"></a>
-                <a href="./otra/Galeria.html"><img src="./Imagenes/4.png"></a>
+                <a href="./pages/Galeria.html"><img src="./Imagenes/1.png"></a>
+                <a href="./pages/Galeria.html"><img src="./Imagenes/2.png"></a>
+                <a href="./pages/Galeria.html"><img src="./Imagenes/3.png"></a>
+                <a href="./pages/Galeria.html"><img src="./Imagenes/4.png"></a>
             </div>
         </section>
     </main>
