--- a/pages/Conocenos.html
+++ b/pages/Conocenos.html
@@ -46,7 +46,7 @@
     </nav>
 
     <h2>Nosotros</h2>
-    <div class="fluid2">
+    <div class="conteConocenos">
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam est labore ratione laborum cumque
             praesentium ducimus, minus nostrum veniam! Aspernatur non ratione dolore id eligendi autem, ea
             laboriosam minima. Earum error tempore nihil incidunt sunt dolor esse? Quibusdam ipsa alias molestiae
@@ -66,11 +66,33 @@
             reprehenderit soluta enim autem eaque, quia quibusdam provident ratione veritatis. Doloremque nostrum
             sequi officia aperiam!
         </p>
-      
-   
     </div>
+    <h2>Estudios y Cusos</h2>
+    <section class="info2">
+        <article class="Foto">
+            <h3>Fotografia</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas a obcaecati, alias accusantium
+                accusamus
+                nobis fugiat sunt vel itaque, porro tempore id incidunt. Veniam fugiat quod corrupti deserunt sunt
+                error.
+            </p>
+        </article>
+        <article class="Diseño">
+            <h3>Diseño Grafico   </h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis rerum at possimus voluptates
+                officia, commodi corrupti debitis accusantium sit aliquam asperiores enim? Esse in aliquid ullam ducimus
+                nostrum sint consequatur.</p>
+        </article>
+        <article class="newb">
+            <h3>New born</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt iste non voluptates nemo eum nulla
+                soluta tenetur earum at ipsum, porro quas corporis quaerat. Placeat reprehenderit quas incidunt repellat
+                accusamus!</p>
+        </article>
+    </section>
+    <img src="../Imagenes/BeFunky-collage.png" alt="" class="fotosconocenos">
 
-    </div>
+    
     <footer class="footer">
         <!--Parte 5-->
         <div class="redes">
