--- a/pages/Precio.html
+++ b/pages/Precio.html
@@ -44,8 +44,9 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
+  
         <h2> Precios por nuestros servicios</h2>
+        <div class="container">
         <table class="table">
             <thead>
                 <tr>
@@ -61,36 +62,44 @@
                     <td>
                         <ul>
                             <li>Desayuno</li>
-                            <li>Salon
-                            <li>
+                            <li>Salon Comedor<li>
                             <li>Habitaciones</li>
                         </ul>
                     </td>
-                    <td>70</td>
+                    <td>70 Unidades</td>
                     <td>$15000</td>
                 <tr>
                     <th scope="row">Embarazada</th>
                     <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, praesentium.</td>
-                    <td>70</td>
+                    <td>70 nidades</td>
                     <td>$15000</td>
                 </tr>
                 <tr>
                     <th scope="row">Cumpleaños</th>
                     <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, praesentium.</td>
-                    <td>75</td>
+                    <td>75 Unidades</td>
                     <td>$15500</td>
                 <tr>
                     <td scope="row"> Casamientos</td>
                     <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, praesentium.</td>
-                    <td>100</td>
+                    <td>100 Unidades</td>
                     <td>$20000</td>
                 </tr>
             </tbody>
         </table>
     </div>
-    <footer class="footer">
-        <!--Parte 5-->
-        <div class="redes">
+
+        <section class="imagFondo">
+            <div class="fotoFondo">
+                <img src="../Imagenes/beltra.png">
+                <img src="../Imagenes/nenita.png">
+                <img src="../Imagenes/papada.png">
+            </div>
+        </section>
+    
+        
+    <footer class="footer">      
+        <div class=" container redes">
             <span> Copyright © </span>
             <a href="https://www.instagram.com/calma.fotografia/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.facebook.com/calmanewborn" target="_blank"><i class="fab fa-facebook-f"></i></a>
