--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -17,7 +17,7 @@
 <body>
 
   <nav class="navbar navbar-expand-sm navbar-light ">
-    <div class="container-fluid fluid1">
+    <div class="container-fluid ">
       <a href="../index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,7 +71,7 @@
     <div class="form-group">
       <label for="state_id" class="control-label"></label>
       <select  class="form-control" >
-        <option class="opciones" hidden selected>Donde nos Conociste?</option>
+        <option class="opciones" value="conociste">Donde nos Conociste?</option>
         <option class="opciones" value="Fb">Facebook</option>
         <option class="opciones" value="Inst">Instagram</option>
         <option class="opciones" value="otro">Otro</option>
@@ -92,8 +92,10 @@
       <button type="submit" class="btn btn-dark">Guardar</button>
       <button type="clean" class="btn btn-dark">Limpiar</button>
     </div>
+</form>
 
-  </form>
+
+
 
 
 
@@ -108,6 +110,7 @@
     </div>
 
   </footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
